libtorrent/c/libtorrent.h

//
// part structures
//

struct error_code
{
	int value;
	char* category;
	char * message;
};
struct endpoint
{
	const char* addr;

	int port;

	struct error_code error;
};
//
// alert structures
//

struct alert
{
	int timestamp;
	char *message;
	char *what;
	int category;
};
struct torrent_alert
{
	struct alert alert;

	void* handle;
};
struct listen_failed_alert
{
	struct alert alert;

	struct endpoint endpoint;
	struct error_code error;
};
struct listen_succeeded_alert
{
	struct alert alert;

	struct endpoint endpoint;
};
struct portmap_error_alert
{
	struct alert alert;

	int mapping;
	int type;
	struct error_code error;
};
struct portmap_alert
{
	struct alert alert;

	int mapping;
	int external_port;
	int type;
};
struct portmap_log_alert
{
	struct alert alert;

	int type;
	const char* msg;
};
struct fastresume_rejected_alert
{
	struct torrent_alert torrent_alert;

	struct error_code error;
};
struct peer_blocked_alert
{
	struct alert alert;

	int ip;
};
struct stats_alert
{
	struct torrent_alert torrent_alert;

	// number of stats_channel, stats_channel_max. jnaerator 0.9.7 unable to parse transferred[stats_channel_max];
	int transferred[10];
	int interval;
};
struct dht_announce_alert
{
	struct alert alert;

	int ip;
	int port;
	const char* info_hash;
};
struct dht_get_peers_alert
{
	struct alert alert;

	const char* info_hash;
};
struct cache_flushed_alert
{
	struct torrent_alert torrent_alert;
};
void free_listen_failed_alert(listen_failed_alert * aa);
listen_succeeded_alert * cast_to_listen_succeeded_alert(void* pop);
void free_listen_succeeded_alert(listen_succeeded_alert * aa);
portmap_error_alert * cast_to_portmap_error_alert(void* pop);
void free_portmap_error_alert(portmap_error_alert * aa);
portmap_alert * cast_to_portmap_alert(void* pop);
void free_portmap_alert(portmap_alert * aa);
portmap_log_alert * cast_to_portmap_log_alert(void* pop);
void free_portmap_log_alert(portmap_log_alert * aa);
fastresume_rejected_alert * cast_to_fastresume_rejected_alert(void* pop);
void free_fastresume_rejected_alert(fastresume_rejected_alert * aa);
peer_blocked_alert * cast_to_peer_blocked_alert(void* pop);
void free_peer_blocked_alert(peer_blocked_alert * aa);
dht_announce_alert * cast_to_dht_announce_alert(void* pop);
void free_dht_announce_alert(dht_announce_alert * aa);
dht_get_peers_alert * cast_to_dht_get_peers_alert(void* pop);
void free_dht_get_peers_alert(dht_get_peers_alert * aa);
stats_alert * cast_to_stats_alert(void* pop);
void free_stats_alert(stats_alert * aa);
cache_flushed_alert * cast_to_cache_flushed_alert(void* pop);
void free_cache_flushed_alert(cache_flushed_alert * aa);