src/main/java/com/github/axet/torrent/rasterbar/TorrentLibrary.java

	/**
	 * Original signature : <code>void free_listen_failed_alert(listen_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:862</i>
	 */
	void free_listen_failed_alert(listen_failed_alert aa);
	/**
	 * Original signature : <code>listen_succeeded_alert* cast_to_listen_succeeded_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:864</i>
	 */
	listen_succeeded_alert cast_to_listen_succeeded_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_listen_succeeded_alert(listen_succeeded_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:866</i>
	 */
	void free_listen_succeeded_alert(listen_succeeded_alert aa);
	/**
	 * Original signature : <code>portmap_error_alert* cast_to_portmap_error_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:868</i>
	 */
	portmap_error_alert cast_to_portmap_error_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_portmap_error_alert(portmap_error_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:870</i>
	 */
	void free_portmap_error_alert(portmap_error_alert aa);
	/**
	 * Original signature : <code>portmap_alert* cast_to_portmap_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:872</i>
	 */
	portmap_alert cast_to_portmap_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_portmap_alert(portmap_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:874</i>
	 */
	void free_portmap_alert(portmap_alert aa);
	/**
	 * Original signature : <code>portmap_log_alert* cast_to_portmap_log_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:876</i>
	 */
	portmap_log_alert cast_to_portmap_log_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_portmap_log_alert(portmap_log_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:878</i>
	 */
	void free_portmap_log_alert(portmap_log_alert aa);
	/**
	 * Original signature : <code>fastresume_rejected_alert* cast_to_fastresume_rejected_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:880</i>
	 */
	fastresume_rejected_alert cast_to_fastresume_rejected_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_fastresume_rejected_alert(fastresume_rejected_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:882</i>
	 */
	void free_fastresume_rejected_alert(fastresume_rejected_alert aa);
	/**
	 * Original signature : <code>peer_blocked_alert* cast_to_peer_blocked_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:884</i>
	 */
	peer_blocked_alert cast_to_peer_blocked_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_blocked_alert(peer_blocked_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:886</i>
	 */
	void free_peer_blocked_alert(peer_blocked_alert aa);
	/**
	 * Original signature : <code>dht_announce_alert* cast_to_dht_announce_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:888</i>
	 */
	dht_announce_alert cast_to_dht_announce_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_dht_announce_alert(dht_announce_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:890</i>
	 */
	void free_dht_announce_alert(dht_announce_alert aa);
	/**
	 * Original signature : <code>dht_get_peers_alert* cast_to_dht_get_peers_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:892</i>
	 */
	dht_get_peers_alert cast_to_dht_get_peers_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_dht_get_peers_alert(dht_get_peers_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:894</i>
	 */
	void free_dht_get_peers_alert(dht_get_peers_alert aa);
	/**
	 * Original signature : <code>stats_alert* cast_to_stats_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:896</i>
	 */
	stats_alert cast_to_stats_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_stats_alert(stats_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:898</i>
	 */
	void free_stats_alert(stats_alert aa);
	/**
	 * Original signature : <code>cache_flushed_alert* cast_to_cache_flushed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:900</i>
	 */
	cache_flushed_alert cast_to_cache_flushed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_cache_flushed_alert(cache_flushed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:902</i>
	 */
	void free_cache_flushed_alert(cache_flushed_alert aa);
}
